--- a/guia3/parte1/products.html
+++ b/guia3/parte1/products.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>seccion productos</title>
-    <link href="css/components.css " rel="stylesheet" >
+     <link href="css/components.css" rel="stylesheet">
 </head>
-<body>
+<body> 
     <div id="header"></div>
-    <div id="content" ></div>
-    <div id="footer" ></div>
+    <div id="content"></div>
+    <div id="footer"></div>
 </body>
-<script src ="js/components.js"></script>
-<script src ="js/products.js"></script>
+<script src="js/components.js"></script>
+<script src="js/products.js"></script>
 </html>
